// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration correctly registers a student 1`] = `
Object {
  "registerStudent": Object {
    "nombre": "Juan",
    "schedule": Object {
      "chat": "somechatlink",
      "classroom": "someclassroomlink",
      "group": "E4-1",
      "sesiones": "somesesioneslink",
      "teacher": "Gonzalo Rocha",
    },
  },
}
`;

exports[`Integration gets and sets registering levels 1`] = `
Object {
  "english": Array [
    1,
    2,
  ],
}
`;

exports[`Integration gets and sets registering levels 2`] = `
Object {
  "saveRegisteringLevels": Array [
    1,
    2,
  ],
}
`;

exports[`Integration returns an applicant by codigo 1`] = `
Object {
  "applicant": Object {
    "apellido_materno": "Martinez",
    "apellido_paterno": "Mamarre",
    "carrera": "Agronegocios",
    "ciclo": "2021A",
    "codigo": "1234567890",
    "curso": "en",
    "email": "m@marre.com",
    "externo": true,
    "genero": "M",
    "nivel": "4",
    "nombre": "Iker",
    "registering": true,
    "schedules": Array [
      Object {
        "group": "E4-2",
        "serialized": "E4-2 Gonzalo Rocha",
        "teacher": "Gonzalo Rocha",
      },
    ],
    "telefono": "3411234567",
  },
}
`;
